--- a/aulaDevops/aula6/Dockerfile
+++ b/aulaDevops/aula6/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:alpine
-COPY . /testjs
+FROM python:alpine
+COPY . /appython 
 
-WORKDIR /testjs
-CMD node resp.js
+WORKDIR /appython
+CMD python proj1.py
 
 #segunda linha vai criar um arquivo chamado appPython
 # docker build -t appython . 
@@ -11,4 +11,4 @@ CMD node resp.js
 # esse programa vai rodar dentro do docker, posso não ter o python instalado esse programa roda 
 # no programa python      
 #para clonar no repositório dokerhub
-#docker tag <nome da imagem(workdir)>:latest <nome  do usuario>/<nome do repositorio>.
+#docker tag <nome da imagem(workdir)>:latest <nome  do usuario>/<nome do repositorio>
